Add support to stop testing via Rest API
1. Add support to stop testing via Rest API;
2. Automatically enable floating IP if under dual-cloud mode;
3. Enhance to support running KloudBuster without keypair;
4. Disable the percentile_of_packet_not_timeout check for progression runs;
